fixed body height issue on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -31,7 +31,7 @@
 
 body {
 	background: var(--clr-bg);
-	height: 100vh;
+	height: calc(100 * var(--vh));
 	width: 100%;
 	display: flex;
 	align-items: center;
@@ -210,6 +210,7 @@ label {
 	position: absolute;
 	top: 5rem;
 	opacity: 0;
+	pointer-events: none;
 }
 
 .range-slider::-moz-range-thumb {
